<resources>
    <string name="app_name">Safelock Savings</string>
    <string name="backText">Back</string>
    <string name="loginText">Sing In</string>
    <string name="userText">User</string>
    <string name="passText">Password</string>
    <string name="missPassText">Forgot your password?</string>
    <string name="nextButton">Next</string>
    <string name="registerText">Register</string>
    <string name="emailText">Email</string>
    <string name="nameText">Name</string>
    <string name="lastnameText">Lastname</string>
    <string name="doYouHaveAnAccountText">Do you have an account?</string>
    <string name="confirmPassText">Confirm Password</string>
    <string name="remindersText">Reminders</string>
    <string name="budgetsText">Budgets</string>
    <string name="reportText">Report</string>
    <string name="settingsText">Settings</string>
    <string name="titleText">Title</string>
    <string name="dateText">Date</string>
    <string name="amountText">Amount</string>
    <string name="enterEmailText">Enter Email</string>
    <string name="enterCodeText">Enter Code</string>
    <string name="codeText">Code</string>
    <string name="cardText">Card</string>
    <string name="subscriptionText">Subscription</string>
    <string name="shopText">Shop</string>
    <string-array name="typeReminders">
        <item>@string/typeRemindersText</item>
        <item>@string/cardText</item>
        <item>@string/subscriptionText</item>
        <item>@string/shopText</item>
    </string-array>
    <string-array name="repeatSubscriptions">
        <item>@string/repeatSubscriptionsText</item>
        <item>@string/weeklyText</item>
        <item>@string/biweeklyText</item>
        <item>@string/monthlyText</item>
    </string-array>
    <string-array name="TypeBudgets">
        <item>@string/typeBudgetsText</item>
        <item>@string/cardText</item>
        <item>@string/subscriptionText</item>
        <item>@string/addText</item>
    </string-array>
    <string-array name="PaymentType">
        <item>@string/paymentTypeText</item>
        <item>@string/settlementText</item>
        <item>@string/defaultAmountText</item>
        <item>@string/minAmountText</item>
        <item>@string/addQuantityText</item>
    </string-array>
    <string-array name="Months">
        <item>@string/januaryText</item>
        <item>@string/februaryText</item>
        <item>@string/marchText</item>
        <item>@string/aprilText</item>
        <item>@string/mayText</item>
        <item>@string/juneText</item>
        <item>@string/julyText</item>
        <item>@string/augustText</item>
        <item>@string/septemberText</item>
        <item>@string/octoberText</item>
        <item>@string/novemberText</item>
        <item>@string/decemberText</item>
    </string-array>
    <string-array name="Years">
        <item>@string/yearText</item>
        <item>@string/a2021Text</item>
    </string-array>
    <string name="minAmountText">Minimum amount</string>
    <string name="settlementText">Settlement</string>
    <string name="cutoffDateText">Cutoff date</string>
    <string name="deadlineText">Deadline</string>
    <string name="importanceText">Importance</string>
    <string name="monthsText">Months</string>
    <string name="newReminderText">New Reminder</string>
    <string name="lessImportantText">Less Important</string>
    <string name="importantText">Important</string>
    <string name="veryImportantText">Very Important</string>
    <string name="okText">Ok</string>
    <string name="cancelText">Cancel</string>
    <string name="nameIsRequiredText">Name is required</string>
    <string name="lastnameIsRequiredText">Lastname is required</string>
    <string name="emailIsRequiredText">Email is required</string>
    <string name="userIsRequiredtext">User is required</string>
    <string name="passwordIsRequiredtext">Password is required</string>
    <string name="provideValidEmailText">Provide valid email</string>
    <string name="passwordDoesnotMatchText">Password doesn\'t match</string>
    <string name="failedToRegisterText">Failed to register</string>
    <string name="informationText">Information</string>
    <string name="userHasBeenRegisteredSuccessfullyText">User has been registered successfully</string>
    <string name="errorText">Error</string>
    <string name="pleaseCheckYourEmailText">Please check your email</string>
    <string name="failedToLogin">Failed to login</string>
    <string name="hiText">Hi</string>
    <string name="pleaseWait...Text">Please Wait...</string>
    <string name="editText">Edit</string>
    <string name="pauseText">Pause</string>
    <string name="deleteText">Delete</string>
    <string name="accountText">Account</string>
    <string name="notificationsText">Notifications</string>
    <string name="languageText">Language</string>
    <string name="biometricDataText">Biometric Data</string>
    <string name="signOutText">Sign Out</string>
    <string name="leastSixCharactersText">Least six characters</string>
    <string name="enterFingerprintText">Enter Fingerprint</string>
    <string name="errorSendingEmailText">Error sending email</string>
    <string name="deleteAccountText">Delete Account</string>
    <string name="threePointsText" translatable="false">...</string>
    <string name="changePasswordText">Change Password</string>
    <string name="invalidEmailOrPasswordText">Invalid email or password</string>
    <string name="theImageHasBeenUploadedText">The image has been uploaded</string>
    <string name="spanishText">Spanish</string>
    <string name="englishText">English</string>
    <string name="applyChangesText">Apply Changes</string>
    <string name="restartTheAppText">Restart the app</string>
    <string name="repeatText">Repeat</string>
    <string name="descriptionText">Description</string>
    <string name="typeRemindersText">Type Reminders</string>
    <string name="newBudgetsText">New Budgets</string>
    <string name="yourAccountHasBeenDeletedText">Your Account Has Been Deleted</string>
    <string name="connectionCouldNotBeEstablishedText">Connection Could Not Be Established</string>
    <string name="confirmText">Confirm</string>
    <string name="typeText">Type</string>
    <string name="amountIsRequiredText">Amount Is Required</string>
    <string name="dateIsRequieredText">Date Is Required</string>
    <string name="importanceIsNotSelectedText">Importance Is Not Selected</string>
    <string name="accountDeletionText">Account Deletion</string>
    <string name="areYouSureToDeleteYourAccountText">Are You Sure To Delete Your Account?</string>
    <string name="minimumAmountIsRequiredText">Minimum Amount Is Required</string>
    <string name="settlementIsRequiredText">Settlement Is Required</string>
    <string name="cutoffIsRequiredText">Cutoff Date Is Required</string>
    <string name="theMonthIsRequiredText">The Month Is Required</string>
    <string name="descriptionIsRequiredText">Description Is Required</string>
    <string name="newCardHasBeenAddedText">New Card Has Been Added</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="repeatSubscriptionsText">Repeat Subscriptions</string>
    <string name="weeklyText">Weekly</string>
    <string name="monthlyText">Monthly</string>
    <string name="biweeklyText">Biweekly</string>
    <string name="deletedCardText">Deleted Card</string>
    <string name="redoText">Redo</string>
    <string name="editedCardText">Edited Card</string>
    <string name="cardPausedText">Card Paused</string>
    <string name="resumeText">Resume</string>
    <string name="cardResumeText">Card Resume</string>
    <string name="undoText">Undo</string>
    <string name="areYouSureToChangeYourPasswordText">Are You Sure To Change Your Password?</string>
    <string name="enterNewPasswordText">Enter New Password</string>
    <string name="sendEmailToChangePasswordText">Send Email To Change Password</string>
    <string name="changeProfilePictureText">Change Profile Picture</string>
    <string name="folderText">Folder</string>
    <string name="cameraText">Camera</string>
    <string name="totalToPayText">Total To Pay : $</string>
    <string name="zeroText" translatable="false">0</string>
    <string name="typeBudgetsText">Type Budgets</string>
    <string name="addText">Add</string>
    <string name="januaryText">January</string>
    <string name="februaryText">February</string>
    <string name="marchText">March</string>
    <string name="aprilText">April</string>
    <string name="mayText">May</string>
    <string name="juneText">June</string>
    <string name="julyText">July</string>
    <string name="augustText">August</string>
    <string name="septemberText">September</string>
    <string name="octoberText">October</string>
    <string name="novemberText">November</string>
    <string name="decemberText">December</string>
    <string name="a2021Text" translatable="false">2021</string>
    <string name="yearText">Year</string>
    <string name="newReportText">New Report</string>
    <string name="viewText">View</string>
    <string name="shareText">Share</string>
    <string name="downloadText">Download</string>
    <string name="isRequiredText">Is Required</string>
    <string name="areYouSureToLogoutText">Are You Sure To Logout?</string>
    <string name="logoutText">Logout</string>
    <string name="newUpdateAvailableText">New Update Available</string>
    <string name="updateText">Update</string>
    <string name="currentVersionText">Current Version</string>
    <string name="lastVersionText">Last Version</string>
    <string name="nightModeText">Night Mode</string>
    <string name="acceptText">Accept</string>
    <string name="didYouMakeThePaymentText">Did you make the payment?</string>
    <string name="cancelledText">Cancelled</string>
    <string name="whatMethodDidYouUseText">What method did you use to make the payment?</string>
    <string name="paymentTypeText">Payment Type</string>
    <string name="addQuantityText">Add Quantity</string>
    <string name="defaultAmountText">Default Amount</string>
    <string name="amountPaidText">Amount Paid:</string>
    <string name="areYouSureYouWantToDeleteEverythingFromBudgetsText">Are You Sure You Want To Delete Everything From Budgets?</string>
    <string name="ifYouDeleteEverythingYouWillNotBeAbleToUndoThisActionText">If You Delete Everything,You Will Not Be Able To Undo This Action</string>
    <string name="fingerprintText">Fingerprint</string>
    <string name="goodMorningText">Good Morning!</string>
    <string name="goodAfternoonText">Good Afternoon!</string>
    <string name="goodNightText">Good Night!</string>
    <string name="toPayText">To Pay</string>
    <string name="nextPaymentOfText">Next payment of</string>
    <string name="theAmountOfText">The amount of $</string>
    <string name="channelForRemindersText">Channel for Reminders</string>
    <string name="infoText">This application was born as a project of the educational experience Technologies and Mobile Applications of University Computer Engineering Veracruzana, is intended to help remind them of their payments to said Users who find it difficult to remember such payments.</string>
    <string name="membersText">Members</string>
    <string name="membersNameText">Alexis Yadir Alvarado and Cimar Adriana Villalba</string>
    <string name="versionText">Version</string>
    <string name="uploadingText">Uploading ...</string>
    <string name="twopointsText" translatable="false">:</string>
    <string name="renameText">Rename</string>
    <string name="batteryOptimizationText">Battery Optimization</string>
    <string name="batteryOptimizationDescriptionText">It is requiered to remove the battery optimization application from the system</string>
    <string name="moneyText" translatable="false">$</string>
    <string name="enterAmountText">Enter Amount</string>
</resources>