<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuReminders"
        android:title="@string/remindersText"
        android:icon="@drawable/ic_reminders_menu_bar"
        app:cnb_iconColor="@color/blue_grey_white"
        app:cnb_backgroundColor="#B4A6F3FA"/>

    <item
        android:id="@+id/menuBudgets"
        android:title="@string/budgetsText"
        android:icon="@drawable/ic_budgets_menu_bar"
        app:cnb_iconColor="@color/orange_black"
        app:cnb_backgroundColor="#C4FAB49C" />

    <item
        android:id="@+id/menuReport"
        android:title="@string/reportText"
        android:icon="@drawable/ic_report_menu_bar"
        app:cnb_iconColor="@color/pink"
        app:cnb_backgroundColor="#CDFFBCEA"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settingsText"
        android:icon="@drawable/ic_settings_menu_bar"
        app:cnb_iconColor="@color/yellow"
        app:cnb_backgroundColor="#D3F8DA96"/>

</menu>