<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white_background">
    <TextView
        android:id="@+id/btnBACK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:padding="10dp"
        android:fontFamily="@font/roboto_regular"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textAlignment="center"
        android:textSize="48sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/grey"/>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white_green"
            android:textColor="@color/blue_grey_white"
            android:background="@drawable/background_edittext_form"
            android:padding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:autofillHints="emailAddress" />
        <EditText
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passText"
            android:inputType="textPassword"
            android:textColorHint="@color/white_green"
            android:background="@drawable/background_edittext_form"
            android:padding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/blue_grey_white"
            android:autofillHints="password"/>
        <TextView
            android:id="@+id/btnFORGOT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missPassText"
            android:textAlignment="textEnd"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto_regular"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/btnREGISTER"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/registerText"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto_regular"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnNEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:background="@drawable/background_button"
            android:paddingHorizontal="25dp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>