<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white_background_sheet"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/didYouMakeThePaymentText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nameText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/signo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/moneyText"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/amountText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_white"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancelledText"
            android:layout_margin="9dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/background_button_white"
            android:fontFamily="@font/poppins_medium"
            android:layout_margin="9dp"
            android:text="@string/noText"

            android:textAllCaps="false" />

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_margin="9dp"
            android:background="@drawable/background_button_white"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/yesText"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>