<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white_background_sheet"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/didYouMakeThePaymentText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

       <soup.neumorphism.NeumorphButton
           android:id="@+id/yes"
           style="@style/Widget.Neumorph.Button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/yesText"
           android:fontFamily="@font/poppins_medium"/>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/no"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noText"
            android:fontFamily="@font/poppins_medium"/>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/cancelled"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelledText"
            android:fontFamily="@font/poppins_medium"/>
    </LinearLayout>


</LinearLayout>