<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/nameText"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/amountText"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/minAmountText"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/settlementText"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/cutoffDateText"
        android:textColor="@color/grey_white_spinner"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/deadlineText"
        android:textColor="@color/grey_white_spinner"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="10dp"
            android:text="@string/importanceText"
            android:textSize="18sp" />

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/box_reminders"
            android:padding="10dp" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_edittext_reminders"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/monthsText"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button"
            android:paddingHorizontal="25dp"
            android:text="@string/nextButton"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>