<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameText"
        android:fontFamily="@font/montserrat_regular"
        android:textColorHint="@color/grey_white_spinner"
        android:textColor="@color/grey_white_spinner"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/amountEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amountText"
        android:fontFamily="@font/montserrat_regular"
        android:textColorHint="@color/grey_white_spinner"
        android:textColor="@color/grey_white_spinner"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="9dp"/>

    <TextView
        android:id="@+id/cutoffDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cutoffDateText"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="9dp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/grey_white_spinner"
        android:maxLines="1"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/deadlineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadlineText"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="9dp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/grey_white_spinner"
        android:maxLines="1"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionText"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="9dp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/grey_white_spinner"
        android:textColorHint="@color/grey_white_spinner"
        android:maxLines="4"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/importanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importanceText"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:padding="10dp"/>
        <View
            android:id="@+id/importantColor"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/box_important_unselected"
            android:padding="10dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <EditText
        android:id="@+id/monthEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/monthsText"
        android:fontFamily="@font/montserrat_regular"
        android:textColorHint="@color/grey_white_spinner"
        android:textColor="@color/grey_white_spinner"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="number"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_edittext_reminders"
        android:layout_marginTop="9dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnNEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:background="@drawable/background_button"
            android:paddingHorizontal="25dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>